--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -7,8 +7,8 @@ on:
     branches: [ "main" ]
 
 env:
-  IMAGE_NAME: ${{ env.IMAGE_NAME }}
-  IMAGE_TAG: ${{ env.IMAGE_TAG }}
+  IMAGE_NAME: side-front
+  IMAGE_TAG: latest
   REGISTRY: ghcr.io/${{ github.repository_owner }}
 
 jobs:
